--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@
 /Packages/User/Package Control.last-run
 /Packages/User/Package Control.sublime-settings
 /Packages/User/encoding_cache.json
+/Packages/User/.SublimeREPLHistory/
