--- a/Packages/Ore/Side Bar.sublime-menu.yml
+++ b/Packages/Ore/Side Bar.sublime-menu.yml
@@ -61,6 +61,11 @@
       -
         caption: "-"
   -
+    caption: "Diff by WinMerge"
+    command: "ore_win_merge_for_side_bar"
+    args:
+      paths: []
+  -
     caption: "-"
   -
     caption: "Find & Replace…"
