--- a/Packages/User/.gitignore
+++ b/Packages/User/.gitignore
@@ -4,3 +4,5 @@
 /Package Control.system-ca-bundle
 /Package Control.user-ca-bundle
 /Preferences.sublime-settings
+/GoSublime-aux.sublime-settings
+/GoSublime/
