Packages/User/.gitignore

--- a/Packages/User/.gitignore
+++ b/Packages/User/.gitignore
@@ -1,6 +1,7 @@
 /encoding_cache.json
 /GoSublime-aux.sublime-settings
 /GoSublime/
+/oscrypto-ca-bundle.crt
 /Package Control.last-run
 /Package Control.merged-ca-bundle
 /Package Control.system-ca-bundle
